[gd_scene load_steps=5 format=3 uid="uid://bplu78msqxbxp"]

[ext_resource type="Script" path="res://menu/PauseMenu.gd" id="1_wof3t"]
[ext_resource type="Shader" path="res://menu/pause_menu.gdshader" id="2_q6p3r"]
[ext_resource type="Theme" uid="uid://dqnnvcqlfco0w" path="res://menu/buttonMenuTheme.tres" id="3_bvwv2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_urhgs"]
shader = ExtResource("2_q6p3r")
shader_parameter/amount = 3.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -1.0
offset_right = -5.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wof3t")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_urhgs")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -50.5
offset_right = 57.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_bvwv2")
text = "Resume"

[node name="Back to menu" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("3_bvwv2")
text = "Back to menu"

[node name="Exit game" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_bvwv2")
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back to menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit game" to="." method="_on_exit_game_pressed"]
